# csapex_person_detection_pcl

./: CMakeLists.txt  package.xml  plugins.xml
csapex/: example.apex
include/person_detection_pcl/: ground_based_people_detection_app.h  head_based_subcluster.h  height_map_2d.h  hog.h  person_classifier.h  person_cluster.h
include/person_detection_pcl/impl/: ground_based_people_detection_app.hpp  head_based_subcluster.hpp  height_map_2d.hpp  person_classifier.hpp  person_cluster.hpp
script/: convert_svm.py
src/csapex/: ground_plane_estimation.cpp  ground_plane_estimation.hpp  pcl_hog_extractor.cpp  pcl_hog_extractor.hpp  person_detection_pcl.cpp  person_detection_pcl.hpp
src/pcl_backport/: hog.cpp
