<?xml version="1.0"?>
<package>
  <name>pcl_person_detection</name>
  <version>0.0.0</version>
  <description>The pcl_person_detection package</description>

  <maintainer email="philipp.kuhlmann@student.uni-tuebingen.de">Philipp Kuhlmann</maintainer>
  <author email="philipp.kuhlmann@student.uni-tuebingen.de">Philipp Kuhlmann</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>csapex</build_depend>
    <build_depend>csapex_core_plugins</build_depend>
    <build_depend>csapex_point_cloud</build_depend>
    <build_depend>csapex_transform</build_depend>
    <build_depend>csapex_opencv</build_depend>
    <build_depend>csapex_ml</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf_conversions</build_depend>

    <run_depend>csapex</run_depend>
    <run_depend>csapex_core_plugins</run_depend>
    <run_depend>csapex_point_cloud</run_depend>
    <run_depend>csapex_transform</run_depend>
    <run_depend>csapex_opencv</run_depend>
    <run_depend>csapex_ml</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf_conversions</run_depend>

  <export>
    <csapex plugin="${prefix}/plugins.xml" />
  </export>
</package>
